--- a/main.html
+++ b/main.html
@@ -2,7 +2,40 @@
 
 <html>
 
+<head><!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OTP Verification</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <div class="container">
+        <h1 id="verification_heading">Verify Your Account</h1>
+        <p id="verification_subtext">
+            We emailed you the six-digit code to acciojob@email.com. Enter the code below to confirm your email address.
+        </p>
+        <div class="code-container">
+            <input type="number" class="code" id="code-1" maxlength="1" required>
+            <input type="number" class="code" id="code-2" maxlength="1" required>
+            <input type="number" class="code" id="code-3" maxlength="1" required>
+            <input type="number" class="code" id="code-4" maxlength="1" required>
+            <input type="number" class="code" id="code-5" maxlength="1" required>
+            <input type="number" class="code" id="code-6" maxlength="1" required>
+        </div>
+        <div class="info-box">
+            This is design only. We didn't actually send you an email as we don't have your email, right?
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
